--- a/fast_reid/configs/AI_BERT/sbs_S50_report.yml
+++ b/fast_reid/configs/AI_BERT/sbs_S50_report.yml
@@ -1,3 +1,44 @@
+# _BASE_: ../Base-SBS.yml
+
+# INPUT:
+#   SIZE_TRAIN: [224, 224]
+#   SIZE_TEST: [224, 224]
+# MODEL:
+#   BACKBONE:
+#     NAME: build_resnest_backbone
+#     PRETRAIN_PATH: './pretrained/mot20_sbs_S50.pth'
+#   HEADS:
+#     POOL_LAYER: GeneralizedMeanPooling
+
+#   # LOSSES:
+#   #   TRI:
+#   #     HARD_MINING: False
+#   #     MARGIN: 0.0
+
+# DATALOADER:
+#   SAMPLER_TRAIN: NaiveIdentitySampler
+#   NUM_INSTANCE: 4
+#   NUM_WORKERS: 8
+
+# DATASETS:
+#   NAMES: ("AICUP",)
+#   TESTS: ("AICUP",)
+
+# SOLVER:
+#   BIAS_LR_FACTOR: 1.
+#   OPT: RAdam
+#   IMS_PER_BATCH: 64
+#   MAX_EPOCH: 40
+#   STEPS: [30, 50]
+#   WARMUP_ITERS: 2000
+
+#   CHECKPOINT_PERIOD: 1
+
+# TEST:
+#   EVAL_PERIOD: 60 # We didn't provide eval dataset
+#   IMS_PER_BATCH: 64
+
+# OUTPUT_DIR: logs/AICUP/sbs_S50
 _BASE_: ../Base-SBS.yml
 
 INPUT:
@@ -8,7 +49,7 @@ MODEL:
     NAME: build_resnest_backbone
     DEPTH: 50x
     PRETRAIN_PATH: './pretrained/mot20_sbs_S50.pth'
-    WITH_IBN: false
+    WITH_IBN: True
     PRETRAIN: True
   HEADS:
     POOL_LAYER: GeneralizedMeanPooling
@@ -17,12 +58,12 @@ MODEL:
   LOSSES:
     TRI:
       HARD_MINING: True
-      MARGIN: 0.3
+      MARGIN: 0.2
 
 DATALOADER:
   SAMPLER_TRAIN: NaiveIdentitySampler
   NUM_INSTANCE: 4
-  NUM_WORKERS: 8
+  NUM_WORKERS: 4
 
 DATASETS:
   NAMES: ("AICUP",)
@@ -39,7 +80,7 @@ SOLVER:
   CHECKPOINT_PERIOD: 1
 
 TEST:
-  EVAL_PERIOD: 60 # We didn't provide eval dataset
+  EVAL_PERIOD: 80 # We didn't provide eval dataset
   IMS_PER_BATCH: 64
 
-OUTPUT_DIR: logs/AI_BERT/sbs_S50_report
+OUTPUT_DIR: logs/AICUP/sbs_S50_2_report_v2
